--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>React App</title>
+    <style>
+      body {
+        margin: 0px;
+        font-family: Helvetica, Arial, sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
