--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>React App</title>
     <style>
       body {
+        overflow-x: hidden;
         margin: 0px;
         font-family: Helvetica, Arial, sans-serif;
       }
